--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -13,9 +13,7 @@ jobs:
         with:
           node-version: 16
       - run: npm install
-      - name: ncc build
-        run: |
-          npx @vercel/ncc build src/main.ts
+      - run: npx @vercel/ncc build src/main.ts
 
   Test:
     runs-on: windows-latest
