--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -20,6 +20,10 @@ jobs:
     needs: Build
     timeout-minutes: 5
     steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
       - uses: ./
         with:
           project-name: UE
