--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "@akiojin/ue-build-github-action",
   "version": "0.2.8",
-  "description": "",
+  "description": "The action is to build the UE project.",
   "main": "dist/index.js",
+  "scripts": {
+    "build": "npm install && ncc build src/main.ts -o dist --license licenses.txt",
+    "clean": "rimraf dist && rimraf node_modules && npm cache clean --force"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/akiojin/ue-build-github-action.git"
@@ -17,12 +21,17 @@
     "url": "https://github.com/akiojin/ue-build-github-action/issues"
   },
   "homepage": "https://github.com/akiojin/ue-build-github-action#readme",
-  "dependencies": {
-    "@actions/core": "^1.10.0",
-    "@actions/exec": "1.1.1",
-    "@akiojin/argument-builder": "1.0.0"
-  },
   "devDependencies": {
-    "@types/node": "^18.15.3"
-  }
+    "@actions/core": "1.10.0",
+    "@actions/exec": "1.1.1",
+    "@akiojin/argument-builder": "1.0.0",
+    "@commitlint/cli": "17.4.4",
+    "@commitlint/config-conventional": "17.4.4",
+    "@types/node": "18.15.3",
+    "@vercel/ncc": "0.36.1",
+    "husky": "8.0.3",
+    "rimraf": "4.4.0",
+    "typescript": "5.0.2"
+  },
+  "private": true
 }
