--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The action is to build the UE project.",
   "main": "dist/index.js",
   "scripts": {
-    "build": "npm install && ncc build src/main.ts -o dist --license licenses.txt",
+    "build": "npm install && ncc build src/main.ts --license licenses.txt",
     "clean": "rimraf dist && rimraf node_modules && npm cache clean --force"
   },
   "repository": {
