--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Build & Test
 
 on:
   push:
@@ -7,18 +7,19 @@ jobs:
   Build:
     runs-on: ubuntu-latest
     timeout-minutes: 5
+
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - run: npm install
-      - run: npx @vercel/ncc build src/main.ts
+      - run: npm run build
 
   Test:
     runs-on: windows-latest
     needs: Build
     timeout-minutes: 5
+
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
